<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/adjust_brightness_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_auto"
        android:layout_margin="8dp"
        android:textSize="@dimen/radio_text_size"
        android:textColor="@color/colorPrimary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_margin="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_out"
        android:textSize="@dimen/radio_text_size"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:fontFamily="@font/lato"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup
        android:id="@+id/screen_time_out_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/time_15000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_15"
            android:textSize="@dimen/radio_text_size"
            android:fontFamily="@font/lato"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:backgroundTint="@color/colorAccent"/>

        <RadioButton
            android:id="@+id/time_30000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_30"
            android:textSize="@dimen/radio_text_size"
            android:fontFamily="@font/lato"
            android:layout_margin="4dp"
            android:padding="4dp"/>

        <RadioButton
            android:id="@+id/time_60000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_60"
            android:textSize="@dimen/radio_text_size"
            android:fontFamily="@font/lato"
            android:layout_margin="4dp"
            android:padding="4dp"/>

        <RadioButton
            android:id="@+id/time_120000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_120"
            android:textSize="@dimen/radio_text_size"
            android:fontFamily="@font/lato"
            android:layout_margin="4dp"
            android:padding="4dp"/>

        <RadioButton
            android:id="@+id/time_300000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_300"
            android:textSize="@dimen/radio_text_size"
            android:fontFamily="@font/lato"
            android:layout_margin="4dp"
            android:padding="4dp"/>

        <RadioButton
            android:id="@+id/time_600000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_600"
            android:textSize="@dimen/radio_text_size"
            android:fontFamily="@font/lato"/>

        <RadioButton
            android:id="@+id/time_forever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_forever"
            android:textSize="@dimen/radio_text_size"
            android:fontFamily="@font/lato"
            android:layout_margin="4dp"
            android:padding="4dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_margin="4dp"
            android:src="@drawable/brightness_icon"
            android:layout_weight="0"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/adjust_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="4dp"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>